cmake_minimum_required(VERSION 3.27)

add_subdirectory(01_socket_IO_buffer)
add_subdirectory(02_socket_none_io_buffer_server)
add_subdirectory(03_socket_none_io_buffer_client)
add_subdirectory(04_socket_SO_REUSEADDR_echo_server)
add_subdirectory(05_socket_SO_REUSEADDR_echo_client)
add_subdirectory(06_multi_thread_echo_server)
add_subdirectory(07_multi_thread_echo_client)